--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,9 +17,6 @@ jobs:
       fail-fast: false
       matrix:
         php-version:
-          - "7.1"
-          - "7.2"
-          - "7.3"
           - "7.4"
           - "8.0"
           - "8.1"
@@ -46,5 +43,9 @@ jobs:
           run: ./vendor/bin/simple-phpunit --color=always ./test
 
         - name: Code style test
-          if: ${{ matrix.php-version == 7.4 }}
+          if: ${{ matrix.php-version == 8.2 }}
           run: ./vendor/bin/phpcs --runtime-set ignore_warnings_on_exit 1
+
+        - name: PHPStan code analysis
+          if: ${{ matrix.php-version == 8.2 }}
+          run: php vendor/bin/phpstan analyze
