--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,15 +33,20 @@ jobs:
           uses: "shivammathur/setup-php@v2"
           with:
             php-version: "${{ matrix.php-version }}"
-            coverage: "none"
+            coverage: "pcov"
             ini-values: "zend.assertions=1"
 
         - name: Install Composer dependencies
           run: composer install --no-progress --ansi
 
         - name: Run tests
-          run: ./vendor/bin/simple-phpunit --color=always ./test
+          run: ./vendor/bin/phpunit --color=always --coverage-clover=coverage.xml ./test
 
+        - name: Send code coverage report to Codecov.io
+          uses: codecov/codecov-action@v3
+          with:
+            files: coverage.xml
+            
         - name: Code style test
           if: ${{ matrix.php-version == 8.2 }}
           run: ./vendor/bin/phpcs --runtime-set ignore_warnings_on_exit 1
