--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 		"ext-exif" : "*",
 		"squizlabs/php_codesniffer" : ">=3.8",
 		"php-coveralls/php-coveralls" : ">=2.7",
-		"symfony/phpunit-bridge" : "^6 || ^7",
+		"phpunit/phpunit" : "^8 || ^9",
 		"phpstan/phpstan": "^1.10"
 	},
 	"autoload" : {
