--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,7 +1,13 @@
 parameters:
 
-  level: 0
+  level: 4
 
   paths:
     - src
     - test
+
+  ignoreErrors:
+    -
+       message: "#^Unreachable statement - code above always terminates.$#"
+       count: 2
+       path: test/ConvertTest.php
