--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,15 @@
 		"squizlabs/php_codesniffer" : ">=3.8",
 		"php-coveralls/php-coveralls" : ">=2.7",
 		"phpunit/phpunit" : "^8 || ^9",
-		"phpstan/phpstan": "^1.10"
+		"phpstan/extension-installer": "^1.1",
+		"phpstan/phpstan": "^1.10",
+		"phpstan/phpstan-phpunit": "^1.3.11"
 	},
+    "config": {
+        "allow-plugins": {
+            "phpstan/extension-installer": true
+        }
+    },
 	"autoload" : {
 		"psr-4" : {
 			"lsolesen\\pel\\" : "src/"
