--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
 		"ext-gd" : "*",
 		"ext-exif" : "*",
 		"squizlabs/php_codesniffer" : ">=3.8",
-		"phpunit/phpunit" : "^9 || ^10",
+		"phpunit/phpunit" : "^9 || ^10 || ^11 ",
 		"phpstan/extension-installer": "^1.1",
 		"phpstan/phpstan": "^1.10",
 		"phpstan/phpstan-phpunit": "^1.3.11"
